testsuite/tests/typing-short-paths/pr5918.compilers.reference
Characters 134-144:
   let _ = { a = () }
           ^^^^^^^^^^
Error: Some record fields are undefined: b

